2004-06-22  Federico Mena Quintero  <federico@ximian.com>

	Merged from HEAD:

	* gtk/gtkfilechooserdefault.c (location_popup_handler): Use a Save
	or an Open stock button for the C-l dialog depending on the action
	in which the file chooser operates.  Fixes #141753.

2004-06-22  Federico Mena Quintero  <federico@ximian.com>

	Merged from HEAD:

	Fixes the GTK+ part of #142308:

	* gtk/gtkfilesystemunix.c (gtk_file_system_unix_filename_to_path):
	Use filename_to_path().
	(gtk_file_system_unix_uri_to_path): Likewise.
	(filename_to_path): Use remove_trailing_slash().

2004-06-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaccelmap.c (_gtk_accel_path_is_valid): Accept
	"<WINDOWTYPE>" as a valid accel path.  (#144427, Philip 
	Kendall)	

	* gtk/gtkselection.c (GTK_SELECTION_MAX_SIZE): Make sure 
	this gets defined for all backends, so linux-fb has a 
	chance of compiling.

	* gtk/gtktreestore.c (gtk_tree_store_swap): Make this work
	for children of the root.  (#139785, Jean-François Wauthy,
	patch by John Finlay)

	* gtk/gtkicontheme.h (GTK_ICON_THEME_GET_CLASS): Typo
	fix.  (#144750, Jeff Franks) 

2004-06-21  Michael Natterer  <mitch@gimp.org>

	* gdk/x11/gdkdrawable-x11.[ch]: made convert_format() utility
	function public as _gdk_x11_convert_to_format().

	* gdk/x11/gdkcursor-x11.c (create_cursor_image): premultiply
	the pixels from the GdkPixbuf when putting them in the
	Xcursor image. Fixes bug #144350.

2004-06-16  Federico Mena Quintero  <federico@ximian.com>

	Merge from HEAD:

	* gtk/gtkfilesystemmodel.c (do_files_added): When inserting a
	visible node, free the old path before creating the new one.
	Fixes #144356.

Tue Jun 15 01:10:32 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c: Make GtkComboBox work without model.  
	(#144198, Mariano Suárez-Alvarez)

2004-06-11  Federico Mena Quintero  <federico@ximian.com>

	Merge from HEAD:

	Fixes #143578:

	* gtk/gtkfilesystemmodel.c (_gtk_file_system_model_add_editable):